# sailor

./: Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain.toml
.github/workflows/: build.yml
kernel/: Cargo.toml
kernel/src/: main.rs  terminal.rs
kernel/src/mem/: mod.rs
src/: main.rs
