[package]
name = "sailor_kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader_api = "^0.11"
x86_64 = {version = "^0.15", features = ["instructions"]}
spin = {version = "^0.10", features = ["mutex"]}
unifont = "^1.1.0"
talc = "^4.4.3"
pc-keyboard = "^0.8"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = 3
lto = true
strip = true
